<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="channels">Channels</string>
	<string name="userJoin">Join channel</string>
	<string name="userSpeak">Speak</string>
	<string name="noServers">Server list empty\nPress Menu key to add a server</string>
	<string name="noChannels">Channel list empty</string>
	<string name="noUsers">User list empty</string>
	<string name="serverAdd">Add Server</string>
	<string name="serverChange">Change Server</string>
	<string name="serverPassword">Password</string>
	<string name="serverUsername">Username</string>
	<string name="serverPort">Port</string>
	<string name="serverHost">Address</string>
	<string name="serverName">Label (Optional)</string>
	<string name="sendText">Send</string>
	<string name="app_name">Mumble</string>
	<string name="server_deleted">Server deleted</string>
	<string name="chat_message">Chat message</string>
	<string name="chatReceiverLabel">Receiver</string>
	<string name="chatReceiverPrompt">Select the receiver</string>
	<string name="connectionProgressTitle">Establishing Connection</string>
	<string name="connectionProgressConnectingMessage">Connecting to Mumble</string>
	<string name="connectionProgressSynchronizingMessage">Synchronizing data with Mumble</string>
	<string name="connectionProgressDisconnectingMessage">Disconnecting...</string>
	<string name="btSpeak">Speak</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_voice_recognition">Voice Recognition</string>
    <string name="tvTextMatches">Text Matches</string>
    <string name="sNoOfMatches">No of Matches</string>
    <string name="etSearchHint">Speech hint here</string>
    <string-array name="saNoOfMatches">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
