<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/connectionViewRoot"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- Channel name + Browse row -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/channelName"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:textSize="30sp" />

        <Button
            android:id="@+id/browseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/channels" />
    </LinearLayout>

    <TextView
        android:id="@+id/noUsersText"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/noUsers"
        android:textSize="40sp" />

    <ListView
        android:id="@+id/channelUsers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1" />

    <!-- Bottom row: Placeholder + Speak/Join + Speaker -->

    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="0sp"
        android:gravity="center"
        android:orientation="horizontal" >

        <!-- Placeholder -->

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            tools:ignore="Orientation" >
        </LinearLayout>

<!-- 			Speak/Join. Only one of these should be visible at any one moment -->

        <Button
            android:id="@+id/joinButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userJoin"
            android:textSize="20sp"
            android:visibility="gone" />

        <ToggleButton
            android:id="@+id/speakButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@+id/speakButton"
            android:textOff="@string/userSpeak"
            android:textOn="@string/userSpeak"
            android:textSize="20sp" />

        <!-- Speaker checkbox -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:gravity="right|center_vertical" >

            <CheckBox
                android:id="@+id/speakerCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>